// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddAdmin /> Rendering: should redirect to login page if user is not authenticated 1`] = `
<Redirect
  push={false}
  to="/users/login"
/>
`;

exports[`<AddAdmin /> Rendering: should render correctly on page load 1`] = `
<div
  id="add-admin-container"
>
  <UserTopNav
    dispatch={[Function]}
    name="test-user"
    title="Add an admin"
  />
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <UserSideNav
        dispatch={[Function]}
        name="test-user"
      />
      <div
        className="col-lg-10 offset-md-2 mt-lg-0"
        id="main-content"
      >
        <Header
          text="Add an admin"
        />
        <div
          className="d-flex flex-column align-items-center mt-5"
        >
          <LoadingIcon
            size={3}
            start={false}
          />
          <div
            className="card align-items-center text-center w-75"
          >
            <div
              className="card-body"
            >
              <BigAlert />
              <div
                className="input-group px-3"
              >
                <span
                  className="input-group-addon"
                >
                  <i
                    className="fa fa-user"
                  />
                </span>
                <input
                  className="form-control"
                  id="input-email"
                  name="email"
                  onChange={[Function]}
                  placeholder="The user's email"
                  type="text"
                />
              </div>
              <SmallAlert
                message={null}
              />
              <ul
                className="text-left mt-2 text-muted"
              >
                <li>
                  The user must have signed up already
                </li>
                <li>
                  If successful, the user would have access to:
                  <ol
                    type="number"
                  >
                    <li>
                      Creating a Center
                    </li>
                    <li>
                      Editing a Center
                    </li>
                    <li>
                      Viewing transactions
                    </li>
                    <li>
                      Making decisions on transactions
                    </li>
                  </ol>
                </li>
              </ul>
              <button
                className="btn btn-primary pointer-button"
                disabled={false}
                id="add-btn"
                onClick={[Function]}
              >
                Add Admin
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <footer
    className="d-block d-sm-none mt-5"
  >
    <div
      className="container text-white text-center py-5"
    >
      <h1>
        Ievents
      </h1>
      <p>
        Copyright © 2017
      </p>
    </div>
  </footer>
</div>
`;

exports[`<AddAdmin /> Rendering: should render correctly when adding 1`] = `
<div
  id="add-admin-container"
>
  <UserTopNav
    dispatch={[Function]}
    name="test-user"
    title="Add an admin"
  />
  <div
    className="container-fluid"
  >
    <div
      className="row"
    >
      <UserSideNav
        dispatch={[Function]}
        name="test-user"
      />
      <div
        className="col-lg-10 offset-md-2 mt-lg-0"
        id="main-content"
      >
        <Header
          text="Add an admin"
        />
        <div
          className="d-flex flex-column align-items-center mt-5"
        >
          <LoadingIcon
            size={3}
            start={true}
          />
          <div
            className="card align-items-center text-center w-75"
          >
            <div
              className="card-body"
            >
              <BigAlert />
              <div
                className="input-group px-3"
              >
                <span
                  className="input-group-addon"
                >
                  <i
                    className="fa fa-user"
                  />
                </span>
                <input
                  className="form-control"
                  id="input-email"
                  name="email"
                  onChange={[Function]}
                  placeholder="The user's email"
                  type="text"
                />
              </div>
              <SmallAlert
                message={null}
              />
              <ul
                className="text-left mt-2 text-muted"
              >
                <li>
                  The user must have signed up already
                </li>
                <li>
                  If successful, the user would have access to:
                  <ol
                    type="number"
                  >
                    <li>
                      Creating a Center
                    </li>
                    <li>
                      Editing a Center
                    </li>
                    <li>
                      Viewing transactions
                    </li>
                    <li>
                      Making decisions on transactions
                    </li>
                  </ol>
                </li>
              </ul>
              <button
                className="btn btn-primary pointer-button"
                disabled={true}
                id="add-btn"
                onClick={[Function]}
              >
                Add Admin
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <footer
    className="d-block d-sm-none mt-5"
  >
    <div
      className="container text-white text-center py-5"
    >
      <h1>
        Ievents
      </h1>
      <p>
        Copyright © 2017
      </p>
    </div>
  </footer>
</div>
`;
